Read lucene docvalues